# cvxpy

./: .gitignore  .readthedocs.yaml  pyproject.toml  rust_caller.py  setup.py
cvxpy/: canonInterface.py  settings.py
cvxpy/atoms/affine/: affine_atom.py  cumsum.py  reshape.py  sum.py
cvxpy/cvxcore/python/: canonInterface.py  cppbackend.py
cvxpy/expressions/: leaf.py
cvxpy/lin_ops/: canon_backend.py  lin_utils.py
cvxpy/reductions/: utilities.py
cvxpy/reductions/dcp2cone/: cone_matrix_stuffing.py
cvxpy/reductions/qp2quad_form/: qp_matrix_stuffing.py
cvxpy/reductions/solvers/: solving_chain.py
cvxpy/tests/: test_atoms.py  test_coeff_extractor.py  test_examples.py  test_expressions.py  test_matrices.py  test_nonlinear_atoms.py  test_python_backends.py  test_rust_backend.py  test_shape.py
cvxpy/utilities/: coeff_extractor.py  shape.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  sg_execution_times.rst
doc/source/_static/: main.js
doc/source/install/: index.rst
doc/source/tutorial/: atomic-functions.csv
examples2/: GALLERY_HEADER.rst  README.txt  least_squares.py
examples2/advanced/: entr-max.py
examples2/basic/: socp.py
examples2/finance/: README.txt  portfolio-optimization.py
examples2/geometric-programming/: README.txt  max-box-volume.py
examples2/machine-learning/: README.txt  lasso.py
examples2/power-systems/: README.txt  opf.py
examples2/quasi-convex-programming/: README.txt  concave-fractional.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: lib.rs  linalg.rs  linops.rs  sparse_tensor.rs  view.rs
(+4 files in other folders)
